--- a/Scraper.ipynb
+++ b/Scraper.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e945a009",
+   "id": "48cc7775",
    "metadata": {},
    "source": [
-    "# Your job: Create a new Jupyter notebook and called it `Scraper`!\n",
+    "# A tutorial on several methods of saving data while using an automatic scraper with GitHub Actions\n",
     "\n",
-    "Also, get on Slack! I'll be doing a lot of cut-and-paste (although I'll also be putting all of this online so you can just copy it all later)"
+    "We'll start by downloading the homepage of https://www.lrt.lt (but in English because I do not know Lithuanian)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9a59fe14",
+   "id": "41b85ab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "71239389",
+   "id": "cdc34aac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0f0f50f4",
+   "id": "3c3a7f51",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d9d5244c",
+   "id": "4c719591",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c7a0b5fd",
+   "id": "5f9a232d",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "53e1764a",
+   "id": "678249c5",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9dae382b",
+   "id": "2ea47ad9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "404560e1",
+   "id": "6b5e6c9e",
    "metadata": {},
    "source": [
     "## What to do with the results????\n",
@@ -225,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "7a9b22a5",
+   "id": "88f542ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa21879",
+   "id": "05dcabe1",
    "metadata": {},
    "source": [
     "### Approach 2: Save a different file every time we run the scraper\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ac9924dc",
+   "id": "d036a75b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8c6e4744",
+   "id": "d407e14b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57426e89",
+   "id": "99a151b0",
    "metadata": {},
    "source": [
     "## Approach 3: Appending to an existing CSV file\n",
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "379685dc",
+   "id": "3661a7d6",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae75c9cd",
+   "id": "40eff9a7",
    "metadata": {},
    "source": [
     "Check what already exists"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "b54f57f9",
+   "id": "459ebc21",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "30cea208",
+   "id": "71f879ca",
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b20ba52f",
+   "id": "21fc358d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9535d64",
+   "id": "c16b942e",
    "metadata": {},
    "outputs": [],
    "source": []
